# py-image-resize

./: README.md  pyproject.toml  resize.py
